# sine

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: git-commit-check.sh  session-start.sh  session-stop.sh
.github/workflows/: ci.yml  hugo.yml
.lookout-patterns/: ARCH-003.yaml  PATTERN-DISC-010.yaml
.monospace-tui/cache/: archetype-admin.md  archetype-dashboard.md  archetypes-full.md  directive.md  keyboard.md  layout.md  palette-full.md  palette.md  textual.md
.wake/shared/: coreyt.jsonl
dev/: README.md
dev/docs/: README.md  codebase-exploration-methodology.md  csharp-codebase-evaluation.md  data-model-schema.md  language-provider-implementations.md  multi-language-extensibility.md  pattern-implementations.md
docs/: User-Guide.md  configuration.md  pattern-catalog.md  pattern-research-template.md
docs/prompts/: system-prompt-pattern-research.md  user-prompt-language-framework.md  user-prompt-language-generic.md  user-prompt-top-level.md
docs/research/: graph-ir-ecosystem-alignment.md  second-shift-design.md  second-shift-pattern-discovery-comprehensive-results.md  second-shift-pattern-discovery-implementation.md  second-shift-pattern-discovery-validation.md  second-shift-pattern-discovery.md
docs/second-shift/pattern-library/: README.md
docs/second-shift/rule-specs/: rule-spec-template.yaml
docs/specs/: best-practices-for-spec-writing.md
docs/specs/pattern-library/: README.md  examples.yaml
docs/specs/rule-specs/: README.md
src/lookout/: __init__.py  baseline.py  cli.py  config.py  init.py  models.py  promotion.py  prompts.py  registry.py  rule_generator.py  rules_loader.py  runner.py  sarif.py  semgrep.py  specs.py
src/lookout/batch/: __init__.py  grid.py  models.py  orchestrator.py  parser.py  prompts.py
src/lookout/built_in_rules/: ARCH-001.yaml  PATTERN-DISC-012.yaml
src/lookout/discovery/: __init__.py  exceptions.py  models.py  storage.py
src/lookout/patterns/: ARCH-001.yaml  ARCH-003.yaml  (+8 more)
src/sine/: __init__.py  baseline.py  cli.py  config.py  init.py  models.py  promotion.py  rule_generator.py  rules_loader.py  runner.py  sarif.py  semgrep.py  specs.py
tests/e2e/: test_docs_agent_pipeline.py  test_promote_generate_check.py
tui/: TUI-DESIGN.md  pyproject.toml
tui/.wake/: .session_reads  blocked.md  constraints.md  decisions.md  events.db  knowledge.md  projection.md  rejected.md  stack.json
tui/src/lookout_tui/: __init__.py  __main__.py  app.py  catalog.py  cli.py  config.py  keys.py
tui/src/lookout_tui/clients/: __init__.py  litellm_client.py  protocol.py
tui/src/lookout_tui/index/: builder.py  models.py
tui/src/lookout_tui/pipeline/: generator.py  models.py
tui/src/lookout_tui/prompts/: loader.py
tui/src/lookout_tui/screens/: batch.py  browser.py  config_editor.py  coverage.py  dashboard.py  generation.py  patterns.py  registry.py  settings.py  validation.py
tui/src/lookout_tui/styles/: app.tcss
tui/src/lookout_tui/widgets/: batch_grid.py  batch_progress.py  context_panel.py  diff_view.py  input_dialog.py  job_queue.py  model_selector.py  pattern_detail.py  pattern_table.py  registry_tree.py  stage_progress.py
tui/tests/unit/: test_batch_grid_widget.py  test_batch_screen.py  test_catalog.py  test_config_editor.py  test_dashboard_screen.py  test_index_builder.py  test_keys.py  test_litellm_client.py  test_model_selector.py  test_patterns_screen.py  test_pipeline_generator.py  test_pipeline_models.py  test_prompt_loader.py  test_registry_screen.py  test_registry_tree.py  test_settings_screen.py
website/: hugo.toml
website/content/: _index.md
website/layouts/: index.html
(+143 files in other folders)
